public class Hamburguesa {
    Hamburguesa[] tipoDeHamburguesa;


}
